--- a/src/scripts/components/Msg/msg.styl
+++ b/src/scripts/components/Msg/msg.styl
@@ -2,6 +2,7 @@
 
 
 .container
+  padding 15px
   text-align center
 
 .msg
@@ -13,6 +14,8 @@
 
 .msg--warning
   font-size 14px
+  @media(max-width 768px)
+    max-width 300px
 
 
 .btn--error
